alignment fixes etc...

--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -2,6 +2,10 @@
   background-color: $bp-d-blue;
   color: $bp-white;
   padding-top: 60px;
-  padding-left:100px;
+
   height: 254px;
+}
+
+.footer-row {
+  margin-left: 151px;
 }
