--- a/css/_shared.scss
+++ b/css/_shared.scss
@@ -9,7 +9,7 @@ body {
   margin-top: 20px;
   max-width: 100%;
   min-height: 100%;
-  font-family: "lato";
+  font-family: lato;
 }
 
 
@@ -17,7 +17,7 @@ body {
   background-color: white;
   border: solid 1px #2c55a0;
   color: #2c55a0;
-  font-family: "lato";
+  font-family: lato;
   font-weight: bold;
   font-size: 12px;
   width: 158px;
@@ -36,7 +36,7 @@ body {
 */
 
 h4, h5 {
-  font-family: "lato";
+  font-family: lato;
   color: white;
   text-align: left;
 }
